plugins
{
    id 'java'
    id 'application'
}

group = 'fr.az.cytokine'

sourceCompatibility = 14
targetCompatibility = 14

version = '1.0'

configurations { extra }

repositories {
	mavenCentral()
}

dependencies {
	configurations.implementation.extendsFrom(configurations.extra)
	extra 'com.beust:jcommander:1.78'
	extra 'io.projectreactor:reactor-core:3.3.7.RELEASE'
	extra fileTree(dir: 'libs', include: ['*.jar'])

	implementation 'org.json:json:20200518'
}

application {
	mainClassName = 'fr.az.cytokine.App'
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs += '--enable-preview'
}

tasks.withType(Jar) {
	from { configurations.extra.collect { it.isRepository() ? it : zipTree(it) } }
	
	manifest {
		attributes(
			'Main-Class': application.mainClassName,
			'Implementation-Title': project.name,
			'Implementation-Version': archiveVersion,
			)
	}
}
